--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "opis/view",
-    "description": "Opis View",
+    "description": "Opis View Component",
     "keywords": ["opis", "view"],
     "homepage": "http://opis.io",
     "license": "Apache-2.0",
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "opis/routing": "1.2.*"
+        "opis/routing": "1.3.*"
     },
     "autoload": {
         "psr-0": {"Opis\\View": ""}
@@ -24,7 +24,7 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1-dev"
+            "dev-master": "1.2-dev"
         }
     }
 }
