--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "opis/routing": "1.0.*"
+        "opis/routing": "dev-nightly"
     },
     "autoload": {
         "psr-0": {"Opis\\View": ""}
@@ -21,10 +21,5 @@
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.1-dev"
-        }
-    }
+    "minimum-stability": "dev"
 }
