--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "opis/routing": "dev-nightly"
+        "opis/routing": "1.1.*"
     },
     "autoload": {
         "psr-4": {"Opis\\View\\": "lib/"}
@@ -20,5 +20,10 @@
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.1-dev"
+        }
+    }
 }
