--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "opis/routing": "1.1.*"
+        "php": ">=5.4.0",
+        "opis/routing": "2.0.*@dev"
     },
     "autoload": {
         "psr-4": {"Opis\\View\\": "lib/"}
@@ -20,10 +20,5 @@
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.1-dev"
-        }
-    }
+    "minimum-stability": "dev"
 }
