--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "opis/view",
-    "description": "A 'must have' view component that can be integrated with multiple rendering engines simultaneously",
+    "description": "A view component that can be integrated with multiple rendering engines simultaneously",
     "keywords": ["view", "template", "renderer", "serializable", "engine"],
     "homepage": "http://opis.io",
     "license": "Apache-2.0",
@@ -12,18 +12,14 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "opis/routing": "2.5.*"
+        "opis/routing": "3.0.*"
     },
     "autoload": {
         "psr-4": {"Opis\\View\\": "lib/"}
     },
-    "config": {
-        "preferred-install": "dist"
-    },
-    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "2.6-dev"
+            "dev-master": "3.1-dev"
         }
     }
 }
