Updated web URL

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "opis/view",
     "description": "A view component that can be integrated with multiple rendering engines simultaneously",
     "keywords": ["view", "template", "renderer", "serializable", "engine"],
-    "homepage": "http://opis.io",
+    "homepage": "http://opis.io/view",
     "license": "Apache-2.0",
     "authors": [
         {
