--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,12 @@
         "php": ">=5.3.0",
         "opis/routing": "3.0.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*"
+    },
     "autoload": {
-        "psr-4": {"Opis\\View\\": "lib/"}
+        "psr-4": {
+            "Opis\\View\\": "lib/"
+        }
     }
 }
