--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "opis/routing": "5.0-alpha.1"
+        "opis/routing": "5.0.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "5.4.*"
@@ -27,6 +27,11 @@
             "Opis\\View\\Test\\": "tests/"
         }
     },
+    "config": {
+        "preferred-install": "dist"
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
             "dev-master": "5.0.x-dev"
