--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "opis/routing": "^5.0"
+        "php": "^7.4",
+        "opis/utils": "2020.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "opis/closure": "4.x-dev"
     },
     "autoload": {
         "psr-4": {
